app/styles/views/dashboard/_interaction.scss
$side-panel-actions-height: side-panel-settings(actions-bar, height);

$interaction-header-title-height: rem-calc(80);
$interaction-checklist-header-height: $column-gutter + $h5-font-size;
$interaction-checklist-dot-size: 8px;

$interaction-header-height:
  $interaction-header-title-height +
  $column-gutter * 2 +
  $side-panel-actions-height;

.side-panel.interaction {
  .side-panel-content header {
    @extend %grid-row;

    width: 100%;

    .date {
      @extend %grid-column-small-12;
      @extend %grid-column-medium-3;
      @extend %grid-column-large-2;

      span {
        display: block;
        line-height: $interaction-header-title-height / 2;
        text-align: center;
      }

      .month {
        @include side-radius(top, $global-radius);

        background-color: $primary-color;
        color: $white;
        letter-spacing: 1px;
        text-transform: uppercase;
      }

      .day {
        @include side-radius(bottom, $global-radius);

        border: 1px solid $primary-color;
        font-size: $h1-font-size;
        line-height: auto;
        padding: $column-gutter / 2;
      }
    }

    > .content {
      @extend %grid-column-small-12;
      @extend %grid-column-medium-9;
      @extend %grid-column-large-10;

      h1 {
        line-height: $interaction-header-title-height / 2;
        margin: 0;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;

        small a {
          color: $small-font-color;
        }
      }

      a {
        line-height: $interaction-header-title-height / 2;
      }

      .primary-contact {
        float: right;
      }

      .pistachio-link {
        padding-right: $column-gutter / 4;

        > div {
          display: inherit;
        }

        i {
          @include icon(external-link);

          font-size: $h6-font-size;
        }
      }

      .call-times {
        display: block;

        > span {
          color: $small-font-color;
          margin-right: $column-gutter / 2;

          &.local-time {
            color: $body-font-color;
            font-weight: $font-weight-bold;
          }

          .highlight {
            color: $anchor-font-color;
          }
        }
      }

      .speak-details {
        display: block;
        font-size: $h6-font-size;

        > li {
          display: inline;

          .speak-title {
            color: $secondary-color;
            text-transform: uppercase;
          }

          .speak-detail {
            color: $small-font-color;
          }

          &:last-child {
            margin-left: $column-gutter / 2;
          }
        }
      }
    }
  }

  .profiles {
    @extend %grid-column-12;

    > ul {
      @media #{$large-up} {
        align-items: stretch;
        display: flex;
      }

      > li {
        @extend %grid-column-small-12;
        @extend %grid-column-medium-12;
        @extend %grid-column-large-6;

        display: flex;
        margin-bottom: $column-gutter / 2;
      }
    }
  }

  .checklist-items {
    @extend %grid-column-12;

    header {
      a {
        @extend %button-primary;

        float: right;
        margin-bottom: 0;
      }
    }

    ul {
      @extend %grid-column-12;

      padding-bottom: $column-gutter / 2;

      li {
        @extend %grid-row;

        border-top: 1px solid $global-section-border-color;
        padding: $column-gutter / 2 0;

        &:before {
          background-color: $alert-color;
          border-radius: $global-rounded;
          display: inline-block;
          height: $interaction-checklist-dot-size;
          margin-right: $column-gutter / 2;
          width: $interaction-checklist-dot-size;
        }

        &.completed:before {
          background-color: $success-color;
        }
      }
    }

    .checklist-status {
      color: $body-font-color;
      display: inline-block;
      font-weight: $font-weight-bold;
      line-height: $interaction-checklist-header-height;
    }
  }

  .form {
    padding: $column-gutter;

    &.completion form #{$form-field-selector} {
      @include form-item-large();
    }

    ul.errors {
      margin-top: $column-gutter;
      padding: 0 $column-gutter;

      li {
        @include alert($bg: $alert-color);

        margin-bottom: rem-calc(2px);
      }
    }

    form {
      #{$form-field-selector} {
        @include form-item-small();
      }

      fieldset {
        margin-top: 0;
      }
    }
  }

  .advisor-payment,
  .completion {
    overflow: auto;

    h1 {
      font-size: $h3-font-size;
      letter-spacing: 0;
      padding-left: $column-gutter / 2;
    }
  }

  .advisor-payment {
    fieldset {
      padding: $column-gutter / 2;
    }

    h1 {
      margin: 0;
    }

    .actions {
      @include clearfix;

      .pay-advisor {
        float: left;
        height: $side-panel-actions-height;

        .liquid-container,
        .liquid-child {
          height: 100%;
        }

        a {
          @extend %button-primary;
        }

        span {
          display: inline-block;
          line-height: $side-panel-actions-height;
          vertical-align: middle;
        }
      }
    }

    .action {
      float: right;
    }
  }
}

